--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kyc-program"
+name = "customer-program"
 version = "0.1.0"
 edition = "2018"
 license = "WTFPL"
@@ -24,5 +24,5 @@ solana-sdk = "=1.7.11"
 solana-validator = "=1.7.11"
 
 [lib]
-name = ["customerdata"]
+name = ["customer"]
 crate-type = ["cdylib", "lib"]
