--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ solana-sdk = "=1.7.11"
 solana-validator = "=1.7.11"
 
 [lib]
-name = ["customer"]
+name = "customer"
 crate-type = ["cdylib", "lib"]
